[tool.poetry]
name = "vacancyobserver"
version = "0.1.0"
description = ""
authors = ["sandroaksyonov@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
python-dotenv = "^1.1.1"
types-requests = "^2.32.4.20250611"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
